syntax = "proto3";

import "google/protobuf/any.proto";

option go_package = "../grpc";

message KafkaRequest {
  KafkaEventValue value = 1;
  google.protobuf.Any headers = 2;
}

message KafkaEventValue {
  string event_name = 1;
  string event_id = 2;
  int64 created_at = 3;
  google.protobuf.Any properties = 4;
  string user_id = 5;
}
